# starter-python

./: .gitignore  README.md  build.sh  clean.sh  make.sh  pyproject.toml  readme.md  requirements.txt  source_me.sh
src/leetcode/: add_binary.py  length_of_last_word.py  my_sqrt.py  plus_one.py  two_sum.py
test/leetcode/: test_add_binary.py  test_length_of_last_word.py  test_my_sqrt.py  test_plus_one.py  test_two_sum.py
venv-scripts/: readme.md  source-me.sh
virtual-build/: build.sh
